[tool.poetry]
name = "disk_profiler"
version = "0.1.0"
description = "Find large files and folders on your disk."
authors = ["SamEdwardes <edwardes.s@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"
plotly = "^4.14.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
